Complete Photography blog post and fix umage sizing on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 @import url(uno.css);
 @import url(monokai.css);
+@import url(added.css);
 
 /* Modifications */
 
@@ -13,7 +14,7 @@ pre.highlight code,
   white-space: pre-wrap;
 }
 
-.btn, 
+.btn,
 .navigation__item a {
   margin: 5px 0;
   white-space: nowrap;
